--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <div class="container">
                 <div>
                     <div class="movieHeader">
-                    <h3 clas="text-center">Search For Any Movie</h3>
+                    <h3 clas="text-center">Search For a Movie</h3>
                     <h6>Just enter any word</h6>
                     </div>
                     <form class=" align-items-start" id="searchMovie">
